Sat, 16 Dec 2006 13:23:54 +0100 Dodji Seketeli

	* configure.ac: bump the version number to 0.2.1 for this bugfix
	  branch

Wed, 13 Dec 2006 22:31:20 +0100 Dodji Seketeli

	* ChangeLog, configure.ac, NEWS: some few updates to prepare 0.2.0

Wed, 13 Dec 2006 08:37:50 +0100 Dodji Seketeli

	* glade/workbench.glade: don't show the the border of the toolbar
	  notebook container. This should fix #385195.

Wed, 13 Dec 2006 08:24:30 +0100 Dodji Seketeli

	* src/persp/dbgperspective/nmv-dbg-perspective.cc: 
	  DBGPerspective::append_source_editor(): more work on the damned
	  close button size. Man, so much try/error cycles. Now it seems
	  to have a decent size. This should close #385186.


Tue, 12 Dec 2006 21:31:56 +0100 Dodji Seketeli

	* src/persp/dbgperspective/nmv-dbg-perspective.cc: set a minimum size
	to the status notebook widget.
	* src/persp/dbgperspective/schemas/Makefile.am: I have seen that
	gconfd-2 --shutdown was not really reliable on my system. When
	launched from the makefile, sometimes it just doesn't restart gconf.
	In any case, what I wanted was not really to restart it, but just make
	it reload its data. So, I switched back to sending it the HUP signal -
	to make it reload its configuration _without_ restarting it -,
	but I test the presence of a gconf process before sending the HUP signal.
	* src/persp/dbgperspective/schemas/nemiver-dbgperspective.schemas: add
	a new pair of keys to host the minimum size of the notebook widget.
	* src/persp/dbgperspective/glade/bodycontainer.glade: don't allow the
	status notebook to shrink beyond its minimum size.
	This entry fixes #384474.

Mon, 11 Dec 2006 23:47:02 +0100 Dodji Seketeli

	* NEWS: updated this

Mon, 11 Dec 2006 23:42:18 +0100 Dodji Seketeli

	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	 DBGPerspective::append_source_editor(): don't request size for the
	 close button in tab. This should fix #384456.

Mon, 11 Dec 2006 11:59:41 +0100 Dodji Seketeli
